Added meta-tags, changed font

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 	<head>
 		<!-- MetaData Here -->
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#4285f4" />
+		<meta name="description" content="Manas Khadka - CS Undergraduate at Stanford" />
 
 		<title>Manas Khadka - Home</title>
+		<link rel="icon" sizes="192x192" href="/data/me2cropped.png" />
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 
