added collage, bottom media banner, website icon, style readjustments

--- a/index.html
+++ b/index.html
@@ -8,36 +8,39 @@
 		<meta name="description" content="Manas Khadka - CS Undergraduate at Stanford" />
 
 		<title>Manas Khadka - Home</title>
-		<link rel="icon" sizes="192x192" href="/data/me2cropped.png" />
+		<link rel="icon" sizes="192x192" href="/data/icons/face-whitebkg-alt.png" />
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 
 	<body style="background-color: rgb(215, 219, 221)">
 		<div id="navbar">
 			<a href="/index.html">Home</a>
-			<a href="/pages/projects.html">Projects</a>
-			<a href="/pages/academics.html">Academics</a>
 			<a href="/pages/about.html">About</a>
-			<a href="/pages/Resume.pdf">Resume</a>
+			<a href="/pages/projects.html">Projects</a>
+			<!-- Page temporarily down: <a href="/pages/academics.html">Academics</a>-->
+			<a href="/pages/Resume.pdf" target="_blank">Resume</a>
+			<!-- Logo temporarily down: <img src="/data/icons/face-bluebkgd.png" style="height: 64px; float: right" /> -->
 		</div>
 
 		<div id="banner">
-			<h2 class="middle-left" style="color: rgb(93, 173, 226)">
+			<h2 class="middle-left" style="color: rgb(37, 145, 216)">
 				CREATING <br />
 				SOFTWARE
 			</h2>
-			<img src="data/me2cropped.png" alt="Image of Manas" style="height: 500px" />
+			<img src="data/style-images/me2cropped.png" alt="Image of Manas" style="height: 500px" />
 			<h2 class="middle-right" style="color: rgb(243, 156, 18)">
 				CREATING <br />
 				SMILES
 			</h2>
 		</div>
 
-		<h1>My Mission</h1>
-		<p style="text-align: center">
+		<h1 id="banner-bottom">I'M MANAS KHADKA</h1>
+		<p class="center-text" style="font-size: 24px">
 			I believe technology exists to improve people’s lives. That’s why I dedicate myself to making software that brings communities together, helps
 			people solve problems, or simply gets a chuckle or grin out of whoever is using it. Anything to make someone’s day a little brighter.
 		</p>
+		<h2 class="center-text" style="font-size: 28px">The Two Halves of My Mission:</h2>
+
 		<div class="row">
 			<div class="column-left">
 				<h3>The Joy of Creation</h3>
@@ -58,9 +61,23 @@
 			</div>
 		</div>
 
-		<p style="text-align: center">
+		<p class="center-text" style="font-size: 24px">
 			I chase these two feelings. They uplift me and inspire me. My goal is to combine these two inspirations and create with the purpose of making
 			people happy.
 		</p>
+
+		<!-- Media Links -->
+		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
+			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
+				><img src="/data/icons/github.png" alt="github" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.linkedin.com/in/mkhadka" target="_blank"
+				><img src="/data/icons/linkedin.png" alt="linkedin" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.instagram.com/manaz_khadka/" target="_blank"
+				><img src="/data/icons/instagram.png" alt="instagram" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
+		</div>
 	</body>
 </html>
