--- a/pages/about.html
+++ b/pages/about.html
@@ -8,20 +8,62 @@
 		<meta name="description" content="Manas Khadka - CS Undergraduate at Stanford" />
 
 		<title>Manas Khadka - About</title>
-		<link rel="icon" sizes="192x192" href="/data/me2cropped.png" />
+		<link rel="icon" sizes="192x192" href="/data/icons/face-whitebkg-alt.png" />
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 
 	<body>
+		<!-- Navigation Bar -->
 		<div id="navbar">
 			<a href="/index.html">Home</a>
-			<a href="/pages/projects.html">Projects</a>
-			<a href="/pages/academics.html">Academics</a>
 			<a href="/pages/about.html">About</a>
-			<a href="/pages/Resume.pdf">Resume</a>
+			<a href="/pages/projects.html">Projects</a>
+			<!-- Page temporarily down: <a href="/pages/academics.html">Academics</a>-->
+			<a href="/pages/Resume.pdf" target="_blank">Resume</a>
 		</div>
 
-		<h1>WELCOME TO ABOUT</h1>
-		<p>Learn more about me</p>
+		<h1>About Me</h1>
+		<p class="about">
+			Hi there! My name Manas and I'm a freshman at Stanford University studying Computer Science. Currently I am exploring Human-Computer
+			Interaction, AI, Data Science, and Game Development to find out how I want to utilize technology to reach my goals.
+		</p>
+		<p class="about">
+			Writing code has become my creative and inspirational outlet, but the core of my values is what brought me where I am. Here, I hope to showcase
+			the little and big things that make me who I am.
+		</p>
+		<h2 class="about">Science Olympiad</h2>
+		<p class="about">
+			A huge influence on my values and who I am today stems from the 7 years I spent doing science olympiad. I got the opportunity to explore so many
+			branches of science. From geology to epidemiology, I got absorbed in the amazing world around me, and through that I developed a strong
+			appreciation for interdisciplinary science. However, I value my time in science olympiad more so for the memories it gave me with some
+			extraordinary people.
+		</p>
+
+		<!-- Collage embed -->
+		<div style="padding-left: 25%; padding-right: 25%">
+			<div data-collage-id="SHQpuQWc" data-aspect-ratio="1.0">
+				<noscript>
+					<a href="https://voilacollage.com/collages/SHQpuQWc" target="_blank">7 Years of Science Olympiad</a> by
+					<a href="https://voilacollage.com/users/VOA4_1pa" target="_blank">Maniekhadka</a> at
+					<a href="https://voilacollage.com" target="_blank">Voilà!Collage – interactive collage widget</a>
+				</noscript>
+			</div>
+		</div>
+		<iframe src="https://voilacollage.com/embed.html?id=SHQpuQWc" frameborder="0" scrolling="no" width="560" height="560"></iframe>
+		<script src="https://assets.voilacollage.com/assets/embed.js" async></script>
+
+		<!-- Media Links -->
+		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
+			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
+				><img src="/data/icons/github.png" alt="github" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.linkedin.com/in/mkhadka" target="_blank"
+				><img src="/data/icons/linkedin.png" alt="linkedin" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.instagram.com/manaz_khadka/" target="_blank"
+				><img src="/data/icons/instagram.png" alt="instagram" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
+		</div>
 	</body>
 </html>
