--- a/pages/academics.html
+++ b/pages/academics.html
@@ -8,20 +8,20 @@
 		<meta name="description" content="Manas Khadka - CS Undergraduate at Stanford" />
 
 		<title>Manas Khadka - Academics</title>
-		<link rel="icon" sizes="192x192" href="/data/me2cropped.png" />
+		<link rel="icon" sizes="192x192" href="/data/icons/face-whitebkg-alt.png" />
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 
 	<body>
 		<div id="navbar">
 			<a href="/index.html">Home</a>
-			<a href="/pages/projects.html">Projects</a>
-			<a href="/pages/academics.html">Academics</a>
 			<a href="/pages/about.html">About</a>
-			<a href="/pages/Resume.pdf">Resume</a>
+			<a href="/pages/projects.html">Projects</a>
+			<!-- Page temporarily down: <a href="/pages/academics.html">Academics</a>-->
+			<a href="/pages/Resume.pdf" target="_blank">Resume</a>
 		</div>
 
-		<h1>WELCOME TO ACADEMICS</h1>
+		<h1>ACADEMICS</h1>
 		<p>
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus adipisci veniam modi pariatur tenetur. Nobis dignissimos aspernatur eius eum
 			nesciunt? Eius ipsam sunt dolorem consectetur! Sequi consequatur rem quasi veniam. Unde porro eius consectetur nihil aliquid? Impedit, tempora!
@@ -94,5 +94,19 @@
 			voluptates sed quam. Maxime totam ratione repudiandae cumque consequatur magni praesentium expedita odit animi nobis ipsum tempore dignissimos
 			esse, distinctio culpa. Nostrum nobis voluptatum repellendus obcaecati dignissimos est laboriosam aliquam ipsa distinctio reiciendis?
 		</p>
+
+		<!-- Media Links -->
+		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
+			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
+				><img src="/data/icons/github.png" alt="github" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.linkedin.com/in/mkhadka" target="_blank"
+				><img src="/data/icons/linkedin.png" alt="linkedin" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.instagram.com/manaz_khadka/" target="_blank"
+				><img src="/data/icons/instagram.png" alt="instagram" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
+		</div>
 	</body>
 </html>
