--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,40 +8,78 @@
 		<meta name="description" content="Manas Khadka - CS Undergraduate at Stanford" />
 
 		<title>Manas Khadka - Projects</title>
-		<link rel="icon" sizes="192x192" href="/data/me2cropped.png" />
+		<link rel="icon" sizes="192x192" href="/data/icons/face-whitebkg-alt.png" />
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 
 	<body>
 		<div id="navbar">
 			<a href="/index.html">Home</a>
-			<a href="/pages/projects.html">Projects</a>
-			<a href="/pages/academics.html">Academics</a>
 			<a href="/pages/about.html">About</a>
-			<a href="/pages/Resume.pdf">Resume</a>
+			<a href="/pages/projects.html">Projects</a>
+			<!-- Page temporarily down: <a href="/pages/academics.html">Academics</a>-->
+			<a href="/pages/Resume.pdf" target="_blank">Resume</a>
 		</div>
 
-		<h1>WELCOME TO PROJECTS</h1>
-		<p>This is a collection of projects I have worked on for organizations, classes, or just for fun</p>
+		<h1>PROJECTS</h1>
+		<p class="center-text">These are a collection of projects I have worked on for organizations, classes, or just for fun (Project Pages WIP)</p>
 
+		<!-- Project Pictures -->
 		<div>
-			<h2>Discord Bot</h2>
-			<img src="/data/discorddev.png" alt="Discord Bot Project" style="width: 500px" />
+			<div style="width: 100%; max-width: 720px; height: 900px; margin: auto">
+				<a href="projects/discordbot.html"
+					><div class="left" style="padding-right: 20px; padding-top: 0px">
+						<img class="project" src="/data/projects/discorddev.png" alt="Discord Dev Banner" />
+						<div class="middle">
+							<div class="snippet">Discord Bot</div>
+						</div>
+					</div></a
+				>
+
+				<a href="projects/asciichess.html"
+					><div class="right" style="padding-top: 0px">
+						<img class="project" src="/data/projects/chess-big.png" alt="Chess" />
+						<div class="middle">
+							<div class="snippet">ASCII Chess</div>
+						</div>
+					</div></a
+				>
+
+				<a href="projects/solarscreensaver.html"
+					><div class="left" style="padding-right: 20px; padding-top: 20px">
+						<video class="project" width="500" autoplay muted loop>
+							<source src="/data/projects/planets.webm" type="video/webm" />
+							Your browser does not support the video tag.
+						</video>
+						<div class="middle">
+							<div class="snippet">Solar System Screensaver</div>
+						</div>
+					</div></a
+				>
+
+				<a href="projects/asteroids.html"
+					><div class="left" style="padding-top: 20px">
+						<img class="project" src="/data/projects/asteroids.jpg" alt="Asteroid Game" />
+						<div class="middle">
+							<div class="snippet">Asteroids Game</div>
+						</div>
+					</div></a
+				>
+			</div>
 		</div>
 
-		<div>
-			<h2>Chess</h2>
-			<img src="/data/chess.png" alt="Chess Project" style="height: 400px" />
+		<!-- Media Links -->
+		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
+			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
+				><img src="/data/icons/github.png" alt="github" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.linkedin.com/in/mkhadka" target="_blank"
+				><img src="/data/icons/linkedin.png" alt="linkedin" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="https://www.instagram.com/manaz_khadka/" target="_blank"
+				><img src="/data/icons/instagram.png" alt="instagram" style="height: 30px; width: 30px"
+			/></a>
+			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
 		</div>
-
-		<div>
-			<h2>Planetary Screensaver</h2>
-			<video width="500" autoplay muted loop>
-				<source src="/data/planets.webm" type="video/webm" />
-				Your browser does not support the video tag.
-			</video>
-		</div>
-
-		<h2>INSERT BOTTOM BANNER</h2>
 	</body>
 </html>
