added discordbot, noisy-blob, and asteroids projects pages

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -37,7 +37,7 @@
 				>
 
 				<a href="projects/asciichess.html"
-					><div class="right" style="padding-top: 0px">
+					><div class="right" style="padding-top: 0px; margin-bottom: 5px">
 						<img class="project" src="/data/projects/chess-big.png" alt="Chess" />
 						<div class="middle">
 							<div class="snippet">ASCII Chess</div>
@@ -58,10 +58,19 @@
 				>
 
 				<a href="projects/asteroids.html"
-					><div class="left" style="padding-top: 20px">
+					><div class="right" style="padding-top: 20px">
 						<img class="project" src="/data/projects/asteroids.jpg" alt="Asteroid Game" />
 						<div class="middle">
 							<div class="snippet">Asteroids Game</div>
+						</div>
+					</div></a
+				>
+
+				<a href="projects/noisy-blob.html"
+					><div class="left" style="padding-top: 20px">
+						<img class="project" src="/data/projects/noisy-blob.jpg" alt="Noisy Blob" />
+						<div class="middle">
+							<div class="snippet">Noisy Blob</div>
 						</div>
 					</div></a
 				>
