Updated/Added Descriptions for all project pages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			I believe technology exists to improve people’s lives. That’s why I dedicate myself to making software that brings communities together, helps
 			people solve problems, or simply gets a chuckle or grin out of whoever is using it. Anything to make someone’s day a little brighter.
 		</p>
-		<h2 class="center-text" style="font-size: 28px">The Two Halves of My Mission:</h2>
+		<h2 class="center-text" style="font-size: 28px">What Drives Me:</h2>
 
 		<div class="row">
 			<div class="column-left">
