--- a/pages/projects/asciichess.html
+++ b/pages/projects/asciichess.html
@@ -24,30 +24,25 @@
 
 		<!-- Project description-->
 		<div style="max-width: 750px; margin: auto">
-			<h2 style="margin-bottom: 5px;">
-				Asteroid Escape
-			</h2>
+			<h2 style="margin-bottom: 5px">ASCII Chess</h2>
 			<p>
-				<i>Made with: JavaScript, p5.js</i> <br>
-				<i>Source: <a href="https://openprocessing.org/sketch/1127408"> OpenProcessing</a> </i>
+				<i>Made with: Python</i> <br />
+				<i>Source: <a href="https://github.com/manaskhadka/ASCII-Chess" target="_blank"> GitHub</a> </i>
 			</p>
 			<p>
-				Asteroid Escape was a small game I made as a project for CS44N: Great Ideas in Graphics. It was an introductory exploration of expressing particles and particle 
-				interactions through pixel-based graphic representations. Particles are used here to represent asteroids, aesthetics (such as the UFO's propulsion), and even the UFO itself. Learning how to implement the physics
-				of particles through code and optimizing efficiency for checking collisions was really cool.
+				ASCII Chess is a project I worked on after taking my first CS class at Stanford: CS106A Programming Methodology. I wanted to step away from
+				adding external libraries and focused on implementing all the logic and graphical display to just base Python. This game allows 2 players to
+				play chess and performs its own checks throughout the game for board states. When a check or checkmate occurs, The game is aware of it and
+				acts accordingly (preventing illegal moves, declaring game end, etc.)
 			</p>
 			<p>
-				I wanted to create an interactive piece of code with some sort of goal in mind for the user. In this case, it is surviving 30 seconds in the midst of an asteroid field.
-				Can you make it?
+				This project acted as a great base to understanding how to implement game logic, piece movement, and reading board states. I hope to create a
+				GUI for this game and integrating it with the web
 			</p>
+
+			<h2>Example TBD</h2>
 		</div>
 		<!-- Project injection-->
-
-		<div>
-			<iframe
-				src="https://openprocessing.org/sketch/1127408/embed/?plusEmbedHash=NDQ2MDg4ODg3NjhkZDJlMTY3OTZkMWFjMDg4NWZjOGEzZGM1ZTcwZmM3NGFlNTFhMDY4N2YzYTA5NGIzZjZjZGY3NmU4OTdmNDA1ODgxOTkwODk4MWIzY2FmMGIwMzNlNmFkMWI4YmM4MWQ3Y2JkMjgzMGYwYzBlMjBjY2FmMGJvWGJ2bk1uc0MyV280cVZxQjBJN1NzTXdwRzZLRTVCTDhCVnlCUE94enNyR2tsYVRCbkpQRWhFRUNFVDd3cmtnQkpSMHB0OURzaTZZNzNEaXA5UlhPQT09&plusEmbedTitle=true"
-=			></iframe>
-		</div>
 
 		<!-- Media Links -->
 		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
@@ -62,8 +57,5 @@
 			/></a>
 			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
 		</div>
-
-
-
 	</body>
 </html>
