--- a/pages/projects/asteroids.html
+++ b/pages/projects/asteroids.html
@@ -40,6 +40,7 @@
 				I wanted to create an interactive piece of code with some sort of goal in mind for the user. In this case, it is surviving 30 seconds in the midst of an asteroid field.
 				Can you make it?
 			</p>
+			<p> Controls: Click for burst of height, move mouse to move UFO</p>
 		</div>
 		<!-- Project injection-->
 
