--- a/pages/projects/discordbot.html
+++ b/pages/projects/discordbot.html
@@ -46,7 +46,7 @@
 				<dd>- Dynamic trading systems and in game currency</dd>
 			</ul>
 
-			<h2>Pictures To Come</h2>
+			<h2>Example TBD</h2>
 		</div>
 		<!-- Project injection-->
 
