--- a/pages/projects/noisy-blob.html
+++ b/pages/projects/noisy-blob.html
@@ -36,7 +36,7 @@
 			</p>
 			<p>
 				Using the sliders, you can view how changing factors affects Mr. Blobby. Increasing the vertices should make him more circular, Changing the
-				speed changes the rate at which new Perlin noise is generated, and increasing the noise factor normalizes the difference in vertice length
+				speed changes the rate at which new Perlin noise is generated, and increasing the noise factor normalizes the difference in vertex length
 				(makes it more smooth).
 			</p>
 		</div>
