--- a/pages/projects/solarscreensaver.html
+++ b/pages/projects/solarscreensaver.html
@@ -24,30 +24,23 @@
 
 		<!-- Project description-->
 		<div style="max-width: 750px; margin: auto">
-			<h2 style="margin-bottom: 5px;">
-				Asteroid Escape
-			</h2>
+			<h2 style="margin-bottom: 5px">Asteroid Escape</h2>
 			<p>
-				<i>Made with: JavaScript, p5.js</i> <br>
-				<i>Source: <a href="https://openprocessing.org/sketch/1127408"> OpenProcessing</a> </i>
+				<i>Made with: Shadertoy (WebGL)</i> <br />
+				<i>Source: <a href="https://www.shadertoy.com/view/WdVyzG" target="_blank"> Shadertoy</a> </i>
 			</p>
 			<p>
-				Asteroid Escape was a small game I made as a project for CS44N: Great Ideas in Graphics. It was an introductory exploration of expressing particles and particle 
-				interactions through pixel-based graphic representations. Particles are used here to represent asteroids, aesthetics (such as the UFO's propulsion), and even the UFO itself. Learning how to implement the physics
-				of particles through code and optimizing efficiency for checking collisions was really cool.
+				Solar System Screensaver was a project I made for CS44N: Great Ideas in Graphics. It was my introduction to using shaders and an OpenGL
+				language. It was very difficult to learn how to use this tool - it was very advanced relative to the technical experience I had at the time. I
+				managed to make a representation of the solar system using simple polygonal squares, using trig functions to map the orbits of planets
 			</p>
 			<p>
-				I wanted to create an interactive piece of code with some sort of goal in mind for the user. In this case, it is surviving 30 seconds in the midst of an asteroid field.
-				Can you make it?
+				The scale of this model: The Sun is 1/4th its size, the solid planets are 2 times their sizes, and the gas planets are to scale. The times of
+				orbit are accurate
 			</p>
+			<h2>Example TBD</h2>
 		</div>
 		<!-- Project injection-->
-
-		<div>
-			<iframe
-				src="https://openprocessing.org/sketch/1127408/embed/?plusEmbedHash=NDQ2MDg4ODg3NjhkZDJlMTY3OTZkMWFjMDg4NWZjOGEzZGM1ZTcwZmM3NGFlNTFhMDY4N2YzYTA5NGIzZjZjZGY3NmU4OTdmNDA1ODgxOTkwODk4MWIzY2FmMGIwMzNlNmFkMWI4YmM4MWQ3Y2JkMjgzMGYwYzBlMjBjY2FmMGJvWGJ2bk1uc0MyV280cVZxQjBJN1NzTXdwRzZLRTVCTDhCVnlCUE94enNyR2tsYVRCbkpQRWhFRUNFVDd3cmtnQkpSMHB0OURzaTZZNzNEaXA5UlhPQT09&plusEmbedTitle=true"
-=			></iframe>
-		</div>
 
 		<!-- Media Links -->
 		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
@@ -62,8 +55,5 @@
 			/></a>
 			<a class="icon" href="mailto:manazkhadka@gmail.com"><img src="/data/icons/mail.png" alt="mail" style="height: 30px; width: 30px" /></a>
 		</div>
-
-
-
 	</body>
 </html>
