updated some paragraphs; added chess gif

--- a/pages/projects/asciichess.html
+++ b/pages/projects/asciichess.html
@@ -36,14 +36,19 @@
 				acts accordingly (preventing illegal moves, declaring game end, etc.)
 			</p>
 			<p>
-				This project acted as a great base to understanding how to implement game logic, piece movement, and reading board states. I hope to create a
-				GUI for this game and integrating it with the web
+				My interest in making this project stemmed from me and my friends' love of chess - I hope to incorporate this into the discord bot I made so
+				we can play eachother where we normally chat. This project acted as a great base to understanding how to implement game logic, piece movement,
+				and reading board states. I hope to create a GUI for this game and integrate it with the web.
 			</p>
-
-			<h2>Example TBD</h2>
 		</div>
 		<!-- Project injection-->
 
+		<div style="display: block; text-align: center">
+			<video style="margin: 0 auto; width: 500px" autoplay loop>
+				<source src="/data/projects/chess-vid.webm" type="video/webm" />
+				Your browser does not support this video tag.
+			</video>
+		</div>
 		<!-- Media Links -->
 		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
 			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
