--- a/pages/projects/asteroids.html
+++ b/pages/projects/asteroids.html
@@ -37,8 +37,8 @@
 				of particles through code and optimizing efficiency for checking collisions was really cool.
 			</p>
 			<p>
-				I wanted to create an interactive piece of code with some sort of goal in mind for the user. In this case, it is surviving 30 seconds in the midst of an asteroid field.
-				Can you make it?
+				I wanted to create an interactive piece of code with some sort of goal in mind for the user. The scope of the project was only to explore particles in graphics, but I hoped to make 
+				a game for my classmates to play and have fun with. I ended up with a game where you have to survive 30 seconds in the midst of an asteroid field. Can you make it?
 			</p>
 			<p> Controls: Click for burst of height, move mouse to move UFO</p>
 		</div>
