--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,8 @@
 			A huge influence on my values and who I am today stems from the 7 years I spent doing science olympiad. I got the opportunity to explore so many
 			branches of science. From geology to epidemiology, I got absorbed in the amazing world around me, and through that I developed a strong
 			appreciation for interdisciplinary science. However, I value my time in science olympiad more so for the memories it gave me with some
-			extraordinary people.
+			extraordinary people. Working with a close, passionate team was extremely fun - it would be amazing to work in a similar environment in the
+			future.
 		</p>
 
 		<!-- Collage embed -->
