fixed typos; finished updating all projects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 
-		<p class="center-text" style="font-size: 24px">
+		<p class="center-text" style="font-size: 24px; margin-top: 40px">
 			I chase these two feelings. They uplift me and inspire me. My goal is to combine these two inspirations and create with the purpose of making
 			people happy.
 		</p>
