--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
 
 		<h1>About Me</h1>
 		<p class="about">
-			Hi there! My name Manas and I'm a freshman at Stanford University studying Computer Science. Currently I am exploring Human-Computer
+			Hi there! My name is Manas and I'm a freshman at Stanford University studying Computer Science. Currently I am exploring Human-Computer
 			Interaction, AI, Data Science, and Game Development to find out how I want to utilize technology to reach my goals.
 		</p>
 		<p class="about">
