--- a/pages/projects/solarscreensaver.html
+++ b/pages/projects/solarscreensaver.html
@@ -38,10 +38,14 @@
 				The scale of this model: The Sun is 1/4th its size, the solid planets are 2 times their sizes, and the gas planets are to scale. The times of
 				orbit are accurate
 			</p>
-			<h2>Example TBD</h2>
 		</div>
 		<!-- Project injection-->
-
+		<div style="display: block; text-align: center">
+			<video style="margin: 0 auto; width: 750px" autoplay loop>
+				<source src="/data/projects/planets-long.webm" type="video/webm" />
+				Your browser does not support this video tag.
+			</video>
+		</div>
 		<!-- Media Links -->
 		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
 			<a class="icon" href="https://github.com/manaskhadka" target="_blank"
