--- a/pages/projects/discordbot.html
+++ b/pages/projects/discordbot.html
@@ -9,7 +9,7 @@
 
 		<title>Discord Bot</title>
 		<link rel="icon" sizes="192x192" href="/data/icons/face-whitebkg-alt.png" />
-		<link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="/css/main.css"/>
 	</head>
 
 	<body>
@@ -23,32 +23,60 @@
 		</div>
 
 		<!-- Project description-->
-		<div style="max-width: 750px; margin: auto">
+		<div style="max-width: 750px; margin: auto;">
 			<h2 style="margin-bottom: 5px">Discord Bot</h2>
 			<p>
 				<i>Made with: JavaScript, Python, discord.py, discord.js, BeautifulSoup, heroku</i> <br />
 				<i>Source: <a href="https://github.com/manaskhadka/NazBot-Public-Build" target="_blank"> GitHub</a> </i>
 			</p>
-			<p>
+			<p style="padding-bottom: 10px">
 				Making a Discord Bot started off as a small project but quickly grew in scale. It was a summer project I made as something that would be fun
 				for me and my friends to use on our Discord server - it was silly and truly a passion project. At first, it was only a chat bot that would
 				return text based on certain commands, but I kept adding features over time.
 			</p>
 
-			<p style="padding-bottom: 0px">These features include:</p>
-			<ul style="margin-bottom: 15px">
-				<li>A Magic8ball response game</li>
-				<li>Fetching and styling weather data from an API</li>
-				<li>Webscraping urbandictionary.com and wikipedia.org to quickly get embedded responses</li>
-				<li>A fully fledged <a href="https://en.wikipedia.org/wiki/Gacha_game" target="_blank">gacha game</a></li>
-				<dd>- Keeps track of user data between servers using <a href="https://jsonbin.io/about" target="_blank"> jsonbin.io</a></dd>
-				<dd>- Collection of over 100 collectible items of varying rarities (featuring various pictures of me and my friends)</dd>
-				<dd>- Dynamic trading systems and in game currency</dd>
-			</ul>
+			<h2 style="padding-bottom: 0px">These features include:</h2>
 
-			<h2>Example TBD</h2>
-		</div>
 		<!-- Project injection-->
+		<div class="row">
+			<div class="column" style="background-color:rgba(243, 157, 18, 0.6)">
+			  <h3>A Magical 8 Ball Game</h3>
+			  <p style="text-align:center;">Input a response and you get a random answer out</p>
+			</div>
+			<div class="column" style="background-color:rgba(243, 157, 18, 0.4)">
+			  <video src="/data/projects/8ball.mp4" width = "375" controls muted></video>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="column" style="background-color:rgba(37, 145, 216, 0.6)">
+			  <h3>Weather Report</h3>
+			  <p style="text-align:center;">fetches weather and time data for an inputted city</p>
+			</div>
+			<div class="column" style="background-color:rgba(37, 145, 216, 0.4)">
+			  <video src="/data/projects/weather.mp4" width = "375" controls muted></video>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="column" style="background-color:rgba(243, 157, 18, 0.6)">
+			  <h3>Urban Dictionary Webscraper</h3>
+			  <p style="text-align:center;">displays the top response for an inputted search phrase from urbandictionary.com</p>
+			</div>
+			<div class="column" style="background-color:rgba(243, 157, 18, 0.4)">
+			  <video src="/data/projects/urbandict.mp4" width = "375" controls muted></video>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="column" style="background-color:rgba(37, 145, 216, 0.6)">
+			  <h3>Wikipedia Webscraper</h3>
+			  <p style="text-align:center;">displays the article for an inputted search phrase from wikipedia.org</p>
+			</div>
+			<div class="column" style="background-color:rgba(37, 145, 216, 0.4)">
+			  <video src="/data/projects/wiki.mp4" width = "375" controls muted></video>
+			</div>
+		</div>
 
 		<!-- Media Links -->
 		<div style="padding-top: 30px; text-align: center; margin-bottom: 20px">
