--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,7 +15,7 @@
 	<body>
 		<div id="navbar">
 			<a href="/index.html">Home</a>
-			<a href="/pages/about.html">About</a>
+			<!-- Page temporarily down: <a href="<a href="/pages/about.html">About</a>-->
 			<a href="/pages/projects.html">Projects</a>
 			<!-- Page temporarily down: <a href="/pages/academics.html">Academics</a>-->
 			<a href="/pages/Resume.pdf" target="_blank">Resume</a>
