--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,7 +22,7 @@
 		</div>
 
 		<h1>PROJECTS</h1>
-		<p class="center-text">These are a collection of projects I have worked on for organizations, classes, or just for fun (Project Pages WIP)</p>
+		<p class="center-text">These are a collection of projects I have worked on for organizations, classes, or just for fun (Project Pages WIP - last updated March 18, 2021)</p>
 
 		<!-- Project Pictures -->
 		<div>
